--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Stakis - Bitstarter</title>
     <link type="text/css" rel="stylesheet" 
           href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
@@ -52,7 +52,7 @@
       </div>
       <div class="row heading">
         <div class="span12">
-          <h1>Bitstarter Title</h1>
+          <h1>Stakis' Bitstarter </h1>
         </div>
       </div> 
      <div class="row subheading">
