--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Sistema de indicadores</title>
+        <title>SpaceCars</title>
 
         <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -105,7 +103,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="#">Sistema de indicadores</a>
+                    
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
@@ -120,12 +118,12 @@
         <div class="container">
             <div class="row-fluid heading">
                 <div class="span12">
-                    <h1>Crowdfunder </h1>
-                </div>
+                    <h1>SpaceCars</h1>
+       </div>
             </div>
             <div class="row-fluid subheading">
                 <div class="span12">
-                    <p class="lead">Attract pre-orders of products</p>
+                    <p class="lead">Cars for rich people</p>
                 </div>
             </div>
             <div class="row-fluid pitch">
