--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
             <div class="row-fluid pitch">
                 <div class="span5 offset1 video">
-                    <img class="img-polaroid" src="http://placehold.it/480x300">
+                    <img class="img-polaroid" src="http://i256.photobucket.com/albums/hh163/stakis3/1.jpg">
                 </div>
 
                 <div class="span5 actions">
@@ -175,16 +175,16 @@
 
             <div class="row-fluid section1">
                 <div class="span5 offset1 asset">
-                    <img class="img-polaroid" src="http://placehold.it/480x300">
+                    <img class="img-polaroid" src="http://i256.photobucket.com/albums/hh163/stakis3/3.jpg">
                 </div>
                 <div class="span5 copy">
                     <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    This is a touchy subject among car enthusiasts but we felt that we might as well 
+                    bring it up since it always brings a lot of sub-topics to the table, and rightfully
+                    so.From Ultra-luxury brands like Rolls Royce, Bentley, and Maybach to premium-luxury
+                    brands such as SpaceCars all of these have the right to be prestigious in their
+                    own rights.We randomly asked 30 people on the street for their opinion, the 
+                    answer was Great!
                     </p>
                 </div>
             </div>
@@ -192,16 +192,15 @@
             <div class="row-fluid section2">
                 <div class="span5 offset1 copy copy-right">
                     <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    SpaceCras specialises in offering luxury car rentals,sales with or without a driver.
+                    Based in Cannes, Paris and Monaco, SpaceCars provides a range of prestigious vehicles
+                    from the leading luxury automakers (Ferrari, Porsche, Mercedes, Bentley, etc.).
+                    We offer you a quality of service that places us among the best in our luxury car 
+                    hire business.
                     </p>
                 </div>
                 <div class="span5 asset">
-                    <img class="img-polaroid" src="http://placehold.it/480x300">
+                    <img class="img-polaroid" src="http://i256.photobucket.com/albums/hh163/stakis3/2.jpg">
                 </div>
             </div>
 
@@ -246,4 +245,3 @@
         </div>
     </body>
 </html>
-
