--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="container">
             <div class="row-fluid heading">
                 <div class="span12">
-                    <h1>SpaceCars</h1>
+                    <h1>SpaceCars!!!</h1>
        </div>
             </div>
             <div class="row-fluid subheading">
