--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+<a class="coinbase-button" data-code="ed62ff79ede207581a8368c74ec8a3a5" href="https://coinbase.com/checkouts/ed62ff79ede207581a8368c74ec8a3a5">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
